--- a/content/bali.html
+++ b/content/bali.html
@@ -22,7 +22,7 @@
   
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark navbar-blog p-md-3">
     <div class="container">
-        <a class="navbar-brand" href="./index.html">TOUR GUIDE</a>
+        <a class="navbar-brand" href="../index.html">TOUR GUIDE</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,19 +35,19 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item mx-4">
-                  <a class="nav-link active" href="./index.html#header">Beranda</a>
+                  <a class="nav-link active" href="../index.html#header">Beranda</a>
                 </li>
                 <li class="nav-item mx-4">
-                  <a class="nav-link" href="./index.html#promo">Promo</a>
+                  <a class="nav-link" href="../index.html#promo">Promo</a>
                 </li>
                 <li class="nav-item mx-4">
-                  <a class="nav-link" href="./index.html#destination">Layanan</a>
+                  <a class="nav-link" href="../index.html#destination">Layanan</a>
                 </li>
                 <li class="nav-item mx-4">
-                  <a class="nav-link" href="./index.html#galery">Galery</a>
+                  <a class="nav-link" href="../index.html#galery">Galery</a>
                 </li>
                 <li class="nav-item mx-4 ">
-                  <a class="nav-link" href="./index.html#contack">Contact</a>
+                  <a class="nav-link" href="../index.html#contack">Contact</a>
                 </li>
               </ul>
               <div class="sosmed p-md-1 pt-3">
@@ -65,7 +65,7 @@
                     <div class="content-blog mx-auto mt-5" data-aos="fade-up" data-aos-duration="2000">
                         <h1>Wisata Tour Bali </h1>
                         <div class="underline mx-auto mb-5"></div>
-                        <img src="./Assets/img/bali.png" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+                        <img src="../Assets/img/bali.png" alt=""  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                         <p class="mt-5 mb-4"  data-aos="fade-right" data-aos-duration="700">
                            Bali, sebuah pulau di Indonesia, dikenal sebagai surga wisata dengan keindahan alamnya yang memukau, budaya yang kaya, dan pantai-pantai yang mempesona. Salah satu daya tarik utama Bali adalah keindahan alamnya yang menakjubkan. Dari sawah terasering yang hijau di Tegallalang hingga gunung-gunung yang menjulang tinggi, Bali menawarkan pemandangan alam yang sangat memukau. Wisatawan sering mengunjungi Gunung Batur untuk menikmati pemandangan matahari terbit yang spektakuler atau menyaksikan tarian air terjun yang indah di Sekumpul.
                         </p>
@@ -74,7 +74,7 @@
                            Bali juga terkenal dengan warisan budayanya yang kaya. Kuil-kuil kuno seperti Pura Besakih atau Pura Tanah Lot mencerminkan keagungan arsitektur Hindu-Bali, dan sering kali menjadi tujuan utama bagi wisatawan yang ingin merasakan atmosfer rohaniah pulau ini. Upacara keagamaan dan tarian tradisional seperti Kecak dan Barong menawarkan pengalaman budaya yang mendalam. Selain itu, seni dan kerajinan Bali, seperti ukiran kayu, patung, dan lukisan, memperkaya pengalaman wisatawan yang mencari benda-benda unik sebagai kenang-kenangan.
                         </p>
                         <h1 class="mb-4 text-start">Pantai Indah</h1>
-                        <img src="./Assets/img/wisata_pantai.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
+                        <img src="../Assets/img/wisata_pantai.jpg" alt=""  data-aos="fade-right" data-aos-duration="1000">
                         <p class="mt-5 mb-5"  data-aos="zoom-in" data-aos-duration="700" data-aos-delay="200">
                             Tidak dapat dipungkiri bahwa pantai-pantai Bali menjadi daya tarik utama bagi pengunjung dari seluruh dunia. Pantai Kuta yang terkenal dengan pasir putihnya yang lembut dan ombaknya yang cocok untuk berselancar, sering menjadi tempat favorit para peselancar. Pantai-pantai lain seperti Uluwatu, Seminyak, dan Nusa Dua juga menawarkan keindahan alam yang menakjubkan serta berbagai kegiatan rekreasi dan hiburan malam. Bali, dengan keunikan dan keragaman yang dimilikinya, menjadi destinasi wisata yang tak terlupakan bagi setiap pengunjung yang mencari pengalaman liburan yang istimewa.
                         </p>
@@ -90,18 +90,18 @@
           <div class="container">
             <div class="col-12 mt-4">
               <div class="sponsor">
-                <img src="./Assets/img/Logo_WI_Final_20092017_ab0ba6b8db.png" alt="">
-                <img src="./Assets/img/itstimeforbali-01-removebg-preview.png" alt="">
-                <img src="./Assets/img/wisata-indonesia-removebg-preview.png" alt="">
-                <img src="./Assets/img/Indonesian_Cultural_Night-removebg-preview.png" alt="">
+                <img src="../Assets/img/Logo_WI_Final_20092017_ab0ba6b8db.png" alt="">
+                <img src="../Assets/img/itstimeforbali-01-removebg-preview.png" alt="">
+                <img src="../Assets/img/wisata-indonesia-removebg-preview.png" alt="">
+                <img src="../Assets/img/Indonesian_Cultural_Night-removebg-preview.png" alt="">
               </div>
               <div class="body mt-4 mb-5">
                 <h3>Ada yang bisa kami bantu?</h3>
                 <div class="underline mx-auto"></div>
                 <p class="mx-auto mt-3">Apakah Anda ingin mencari tur atau menghubungi pemandu? Mulailah dengan alat Temukan Tur kami.
                     Jika Anda memerlukan bantuan dari Tim kami, Anda dapat menghubungi kami kapan saja.</p>
-                <img src="./Assets/img/whatsapp.png" alt=""> <a href="https://api.whatsapp.com/send?phone=62895331887310" class="btn btn-primary" target="_blank">WhatsApp</a>
-                <img src="./Assets/img/gmail.png" alt=""> <a href="mailto:ibunu.nurdiyansa28@gmail.com?Subject=Mau%20tanya" class="btn btn-primary">Email</a>
+                <img src="../Assets/img/whatsapp.png" alt=""> <a href="https://api.whatsapp.com/send?phone=62895331887310" class="btn btn-primary" target="_blank">WhatsApp</a>
+                <img src="../Assets/img/gmail.png" alt=""> <a href="mailto:ibunu.nurdiyansa28@gmail.com?Subject=Mau%20tanya" class="btn btn-primary">Email</a>
               </div>
             </div>
           </div>
