--- a/content/bali.html
+++ b/content/bali.html
@@ -51,7 +51,7 @@
                 </li>
               </ul>
               <div class="sosmed p-md-1 pt-3">
-                  <a href="https://api.whatsapp.com/send?phone=62895331887310" class="" target="_blank"><img src="./Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
+                  <a href="https://api.whatsapp.com/send?phone=62895331887310" class="" target="_blank"><img src="../Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
               </div>
             </div>
         </div>
