--- a/content/bali.html
+++ b/content/bali.html
@@ -19,41 +19,32 @@
     <link rel="stylesheet" href="/Assets/CSS/style.css">
 </head>
 <body>
-  
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark navbar-blog p-md-3">
-    <div class="container">
-        <a class="navbar-brand" href="/index.html">TOUR GUIDE</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-            <div class="offcanvas-header">
-              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            </div>
-            <div class="offcanvas-body">
-              <ul class="navbar-nav mx-auto">
-                <li class="nav-item mx-4">
-                  <a class="nav-link active" href="/index.html#header">Beranda</a>
-                </li>
-                <li class="nav-item mx-4">
-                  <a class="nav-link" href="/index.html#promo">Promo</a>
-                </li>
-                <li class="nav-item mx-4">
-                  <a class="nav-link" href="/index.html#destination">Layanan</a>
-                </li>
-                <li class="nav-item mx-4">
-                  <a class="nav-link" href="/index.html#galery">Galery</a>
-                </li>
-                <li class="nav-item mx-4 ">
-                  <a class="nav-link" href="/index.html#contack">Contact</a>
-                </li>
-              </ul>
-              <div class="sosmed p-md-1 pt-3">
-                  <a href="https://api.whatsapp.com/send?phone=62895331887310" class="" target="_blank"><img src="./Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
-              </div>
-            </div>
+
+    <nav class=" navbar navbar-expand-md fixed-top navbar-dark navbar-blog p-md-3">
+      <div class="container-md">
+        <a class="navbar-brand" href="">TOUR GUIDE</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#btn"> <span class="navbar-toggler-icon"></span> </button>
+        <div class=" collapse navbar-collapse " id="btn">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item mx-4">
+              <a class="nav-link active" href="/index.html#header">Beranda</a>
+            </li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="/index.html#promo">Promo</a>
+            </li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="/index.html#destination">Layanan</a>
+            </li>
+            <li class="nav-item mx-4">
+              <a class="nav-link" href="/index.html#galery">Galery</a>
+            </li>
+            <li class="nav-item mx-4 ">
+              <a class="nav-link" href="/index.html#contack">Contact</a>
+            </li>
+          </ul> 
+          <div class="p-md-1 pt-2">
+            <a class="text-white text-decoration-none" href="https://api.whatsapp.com/send?phone=62895331887310" target="_blank"><img src="/Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
+          </div>
         </div>
       </div>
     </nav>
@@ -126,7 +117,5 @@
     <script src="https://kit.fontawesome.com/6bb3325ecd.js" crossorigin="anonymous"></script>
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
