--- a/index.html
+++ b/index.html
@@ -20,20 +20,12 @@
 </head>
 <body>
 
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent p-md-3">
-    <div class="container">
-        <a class="navbar-brand" href="index.html">TOUR GUIDE</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-            <div class="offcanvas-header">
-              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            </div>
-            <div class="offcanvas-body">
-              <ul class="navbar-nav mx-auto">
+    <nav class=" navbar navbar-expand-lg fixed-top navbar-dark bg-transparent p-md-3">
+      <div class="container-md">
+        <a class="navbar-brand" href="">TOUR GUIDE</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#btn"> <span class="navbar-toggler-icon"></span> </button>
+        <div class=" collapse navbar-collapse " id="btn">
+            <ul class="navbar-nav mx-auto">
                 <li class="nav-item mx-4">
                   <a class="nav-link active" href="#header">Beranda</a>
                 </li>
@@ -50,11 +42,10 @@
                   <a class="nav-link" href="#contack">Contact</a>
                 </li>
               </ul>
-
-              <div class="sosmed p-md-1 pt-3">
-                  <a href="https://api.whatsapp.com/send?phone=62895331887310" class="" target="_blank"><img src="./Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
+              
+              <div class="p-md-1 pt-2">
+                <a class="text-white text-decoration-none" href="https://api.whatsapp.com/send?phone=62895331887310" target="_blank"><img src="./Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
               </div>
-            </div>
         </div>
       </div>
     </nav>
@@ -96,7 +87,7 @@
               <div class="underline mx-auto mb-5" ></div>
             </div>
   
-            <div class="col-lg-4">
+            <div class="col-md-4">
               <div class="card" data-aos="fade-down" data-aos-duration="1500">
                 <img src="./Assets/img/yogya.jpg" alt="" class="img">
                 <div class="card-body">
@@ -120,7 +111,7 @@
               </div>
             </div>
   
-            <div class="col-lg-4">
+            <div class="col-md-4">
               <div class="card" data-aos="fade-down" data-aos-delay="300" data-aos-duration="1500">
                 <img src="./Assets/img/wisata-indonesia-5-Manado-Express.jpg" alt="" class="img">
                 <div class="card-body">
@@ -144,7 +135,7 @@
               </div>
             </div>
   
-            <div class="col-lg-4">
+            <div class="col-md-4">
               <div class="card" data-aos="fade-down" data-aos-delay="400" data-aos-duration="1500">
                 <img src="./Assets/img/danau toba.jpg" alt="" class="img">
                 <div class="card-body">
@@ -251,7 +242,7 @@
             </div>
   
             <div class="row">
-              <div class="col-lg-4 ">
+              <div class="col-md-4 ">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000">
                   <img src="./Assets/img/bromo.jpg" alt="">
                   <div class="info p-4">
@@ -262,7 +253,7 @@
                 </div>
               </div>
   
-              <div class="col-lg-4">
+              <div class="col-md-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">
                   <img src="./Assets/img/Bali.jpg" alt="">
                   <div class="info p-4">
@@ -273,7 +264,7 @@
                 </div>
               </div>
   
-              <div class="col-lg-4">
+              <div class="col-md-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="300">
                   <img src="./Assets/img/Lombok.jpg" alt="">
                   <div class="info p-4">
@@ -284,7 +275,7 @@
                 </div>
               </div>
   
-              <div class="col-lg-4">
+              <div class="col-md-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="400">
                   <img src="./Assets/img/yogya.jpg" alt="">
                   <div class="info p-4">
@@ -295,7 +286,7 @@
                 </div>
               </div>
   
-              <div class="col-lg-4">
+              <div class="col-md-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="500">
                   <img src="./Assets/img/bunaken.jpg" alt="">
                   <div class="info p-4">
@@ -306,7 +297,7 @@
                 </div>
               </div>
   
-              <div class="col-lg-4">
+              <div class="col-md-4">
                 <div class="card" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="600">
                   <img src="./Assets/img/Kepulauan-Seribu.jpg" alt="">
                   <div class="info p-4">
@@ -363,7 +354,5 @@
     <script src="https://kit.fontawesome.com/6bb3325ecd.js" crossorigin="anonymous"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
