Update fix responsive

--- a/content/bromo.html
+++ b/content/bromo.html
@@ -27,23 +27,23 @@
       <div class=" collapse navbar-collapse " id="btn">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item mx-4">
-            <a class="nav-link active" href="/index.html#home">Beranda</a>
+            <a class="nav-link active" href="../index.html#home">Beranda</a>
           </li>
           <li class="nav-item mx-4">
-            <a class="nav-link" href="/index.html#promo">Promo</a>
+            <a class="nav-link" href="../index.html#promo">Promo</a>
           </li>
           <li class="nav-item mx-4">
-            <a class="nav-link" href="/index.html#destination">Layanan</a>
+            <a class="nav-link" href="../index.html#destination">Layanan</a>
           </li>
           <li class="nav-item mx-4">
-            <a class="nav-link" href="/index.html#galery">Galery</a>
+            <a class="nav-link" href="../index.html#galery">Galery</a>
           </li>
           <li class="nav-item mx-4 ">
-            <a class="nav-link" href="/index.html#contack">Contact</a>
+            <a class="nav-link" href="../index.html#contack">Contact</a>
           </li>
         </ul> 
         <div class="p-md-1 pt-2">
-            <a class="text-white text-decoration-none" href="https://api.whatsapp.com/send?phone=62895331887310" target="_blank"><img src="./Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
+            <a class="text-white text-decoration-none" href="https://api.whatsapp.com/send?phone=62895331887310" target="_blank"><img src="../Assets/img/whatsapp.png" alt="" srcset="" style="width: 24px; width: 24px; margin-right: 10px;">Whatsapp</a>
         </div>
       </div>
     </div>
@@ -114,10 +114,8 @@
         </div>
     </div>
   
-    <script src="/Assets/js/script.js"></script>
-
-    <script src="/Assets/js/script.js"></script>
-
+    <script src="../Assets/js/script.js"></script>
+    
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
     <script src="https://kit.fontawesome.com/6bb3325ecd.js" crossorigin="anonymous"></script>
